# applications-menu

./: meson.build  meson_options.txt
data/: io.elementary.desktop.wingpanel.applications-menu.gschema.xml  meson.build  org.ubuntubudgie.plugins.budgie-appmenu.gschema.xml
debian/: changelog  control  copyright  files  rules
debian/source/: include-binaries
src/: AppMenu.vala  SlingshotView.vala  meson.build  powerstrip.vala  settings.ui
src/Backend/: App.vala  AppSystem.vala  DBusService.vala  SynapseSearch.vala
src/Views/: CategoryView.vala  GridView.vala  SearchView.vala
src/Widgets/: AppButton.vala  AppContextMenu.vala  AppListBox.vala  AppListRow.vala
src/synapse-core/: desktop-file-service.vala
src/synapse-core/Actions/: RunnerAction.vala
src/synapse-plugins/: control-panel-plugin.vala  desktop-file-plugin.vala
